# discord-qna-bot

./: .cursorrules  .env.example  .env.sample  .gitignore  .mypy.ini  README.md  pyproject.toml
discord_qna_bot/: __init__.py  config.py  main.py  oauth_server.py  run_oauth_server.py
documentation/: product-requirement-document.md
playground/: __init__.py  discord_api.py  rag_llama_index_faiss.py
src/: __init__.py  config.py  dependencies.py  main.py  oauth_server.py  rag_llama_index_faiss.py  token_storage.py
src/api/: discord_client.py
src/auth/: oauth_server.py  token_manager.py
src/client/: discord_api.py
src/config/: settings.py
src/core/: dependencies.py  message_service.py
src/models/: discord_models.py  token_models.py
src/services/: discord_service.py  rag_service.py
tests/: __init__.py
