[tool.poetry]
name = "discord-qna-bot"
version = "0.1.0"
description = ""
authors = ["Alex Amit <you@example.com>"] # TODO: Update with your details
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"                              # Specify your desired Python version
httpx = "^0.28.1"
pydantic = "^2.10.6"
llama-index-core = "^0.12.12"
llama-index-vector-stores-faiss = "^0.3.0"
llama-index-embeddings-huggingface = "^0.5.2"
llama-index-llms-gemini = "^0.4.13"
python-dotenv = "^1.1.0"
faiss-cpu = "^1.7.4"
llama-index-llms-openai = "^0.3.27"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-colorama = "^0.4.15.20240311"

[tool.poetry.scripts]
discord-qna-bot = "src.main:main"
discord-oauth-server = "src.run_oauth_server:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Add specific module overrides for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "faiss.*"
]
ignore_missing_imports = true
